--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   flutter_html: ^2.2.1
   html_editor_enhanced: ^2.5.0
   file_picker: ^4.6.0
-  image_picker: ^0.8.6
+  intl: ^0.18.0
+  fancy_drawer: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
