--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   file_picker: ^4.6.0
   intl: ^0.18.0
   fancy_drawer: ^2.0.0
+  provider: ^6.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
