--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.2 <3.0.0'
+  sdk: '>=2.19.6 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -31,13 +31,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  dio: ^4.0.6
-  shared_preferences: ^2.0.15
-  flutter_html: ^2.2.1
-  file_picker: ^4.6.0
-  intl: ^0.18.0
+  dio: ^5.1.1
+  shared_preferences: ^2.1.0
+  file_picker: ^5.2.10
+  intl: ^0.17.0
   fancy_drawer: ^2.0.0
   provider: ^6.0.5
+  top_snackbar_flutter: ^3.0.0+1
+  flutter_html: ^2.2.1
+  html_editor_enhanced: ^2.5.1
+  dartz: ^0.10.1
 
 
   # The following adds the Cupertino Icons font to your application.
