--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,8 +2,9 @@
     package="com.example.examz">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.EXPAND_STATUS_BAR" />
     
-   <application
+    <application
         android:label="examz"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
